force-app/main/default/objects/GymMembership__c/GymMembership__c.object-meta.xml
<CustomObject>
    <label>GymMembership</label>
    <nameField>
        <displayFormat>C-{YY}{MM}{000000}</displayFormat>
        <label>GymMembership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GymMemberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>