force-app/main/default/objects/GymMembership__c/fields/ActiveMembership__c.field-meta.xml
<CustomField>
    <fullName>ActiveMembership__c</fullName>
    <formula>EndDate__c &gt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActiveMembership</label>
    <type>Checkbox</type>
</CustomField>