force-app/main/default/objects/GymMembership__c/fields/GymMember__c.field-meta.xml
<CustomField>
    <fullName>GymMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GymMember</label>
    <referenceTo>GymMember__c</referenceTo>
    <relationshipLabel>GymMemberships</relationshipLabel>
    <relationshipName>GymMemberships</relationshipName>
    <type>Lookup</type>
</CustomField>