force-app/main/default/objects/GymMembership__c/validationRules/Start_Date_earlier_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_earlier_than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorMessage>Start date must be before end date</errorMessage>
</ValidationRule>